# mdio-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ContributionGuide.md  README.md  USER_GUIDE.md
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
.github/actions/setup_cache/: action.yml
.github/workflows/: clang-format-check.yml  cmake_build.yaml  codeql-analysis.yml
cmake/: CodeCoverage.cmake  FindEXT_TENSORSTORE.cmake  Findnlohmann_json_schema_validator.cmake  mdioConfig.cmake.in
cmake/CMakeHelpers/: MdioHelpers.cmake
docker/: Dockerfile
examples/dataset_example/: CMakeLists.txt
examples/dataset_example/src/: dataset_example.cc  dataset_example.h
examples/hello_mdio/: CMakeLists.txt
examples/hello_mdio/src/: hello_mdio.cc  hello_mdio.h
examples/real_data_example/: CMakeLists.txt  README.md
examples/real_data_example/src/: interpolation.h  progress.h  real_data_example.cc  seismic_numpy.h
examples/seismic_reader/: CMakeLists.txt  README.md  bootstrap.sh  main.cc  main.hh  stats.hh  utm.hh
examples/xarray_integration/: CMakeLists.txt  README.md  pyproject.toml
examples/xarray_integration/src/: mdio_from_xarray.cc  xarray_integration.cc  xarray_integration.h  xarray_integration.py
html/: annotated.html  annotated_dup.js  bool__as__int_8h_source.html  classes.html  classmdio_1_1Dataset-members.html  classmdio_1_1Dataset.html  classmdio_1_1Dataset.js  classmdio_1_1ProgressTracker-members.html  classmdio_1_1ProgressTracker.html  classmdio_1_1ProgressTracker.js  classmdio_1_1UserAttributes-members.html  classmdio_1_1UserAttributes.html  classmdio_1_1UserAttributes.js  classmdio_1_1VariableCollection-members.html  classmdio_1_1VariableCollection.html  classmdio_1_1VariableCollection.js  classmdio_1_1internal_1_1CenteredBinHistogram-members.html  classmdio_1_1internal_1_1CenteredBinHistogram.html  classmdio_1_1internal_1_1CenteredBinHistogram.js  classmdio_1_1internal_1_1EdgeDefinedHistogram-members.html  classmdio_1_1internal_1_1EdgeDefinedHistogram.html  classmdio_1_1internal_1_1EdgeDefinedHistogram.js  classmdio_1_1internal_1_1Histogram-members.html  classmdio_1_1internal_1_1Histogram.html  classmdio_1_1internal_1_1Histogram.js  classmdio_1_1internal_1_1SummaryStats-members.html  classmdio_1_1internal_1_1SummaryStats.html  classmdio_1_1internal_1_1SummaryStats.js  compress_8h_source.html  dataset_8h_source.html  dataset__example_8h_source.html  dataset__factory_8h_source.html  dataset__schema_8h_source.html  dataset__validator_8h_source.html  delete_8h_source.html  deprecated.html  dir_0fb0ae59584a3e16701e05fe3bbf6c22.html  dir_0fb0ae59584a3e16701e05fe3bbf6c22.js  dir_11202462ce296e8672524765227c11cc.html  dir_11202462ce296e8672524765227c11cc.js  (+122 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+31 more)
mdio/: .clang-format  CMakeLists.txt  Doxyfile  acceptance_test.cc  acceptance_test_v3.cc  coordinate_selector.h  coordinate_selector_test.cc  dataset.h  dataset_factory.h  dataset_factory_test.cc  dataset_schema.h  dataset_test.cc  dataset_validator.h  dataset_validator_test.cc  dummy.cc  gcs_test.cc  header_variable.h  header_variable_test.cc  impl.h  intersection.h  intersection_test.cc  mdio.cc  mdio.h  monolith.cc  s3_test.cc  stats.h  stats_test.cc  utils.h  utils_test.cc  variable.h  variable_collection.h  variable_collection_test.cc  variable_test.cc  view.h  view_test.cc  xarray_compatibility_test.py  zarr_compatibility.py
mdio/regression_tests/: fill_value_parity_test.py  multidimio_compatibility_test.py  xarray_compatibility_test.py  zarr_compatibility.py
mdio/utils/: coordinate_access.h  delete.h  delete_test.cc  segy_export.h  trim.h  trim_test.cc
mdio/zarr/: zarr.h  zarr_driver.h  zarr_test.cc  zarr_v2.h  zarr_v3.h
